crates/claim/tests/snapshots/snapshots__check_all_skipped_human_snapshot.snap
---
source: crates/claim/tests/snapshots.rs
expression: "stdout(&repo, &[\"check\"], 0)"
---
parked  (.claims/parked.md)
  skipped      (no expiry)
      | no runner in this environment

Checked 1 claim(s). Exit 0: no checks ran (all skipped).
