crates/claim/tests/snapshots/snapshots__check_human_snapshot.snap
---
source: crates/claim/tests/snapshots.rs
expression: "stdout(&repo, &[\"check\"], 0)"
---
a  (.claims/a.md)
  held         exit 0
b  (.claims/b.md)
  held         exit 0

Checked 2 claim(s). Exit 0: all held, all supports resolved.
