crates/claim/tests/snapshots/snapshots__drift_clean_human_snapshot.snap
---
source: crates/claim/tests/snapshots.rs
expression: "stdout(&repo, &[\"drift\"], 0)"
---
No drifted claims. The store is clean.
