crates/claim/tests/snapshots/snapshots__retire_human_snapshot.snap
---
source: crates/claim/tests/snapshots.rs
expression: "redact_write_output(&body, repo.path())"
---
Retired claim 'b-fact'.
  note: superseded by a real test
Removed .claims/b-fact.md from the working tree; the changelog is git history (`git log .claims/`).

Nothing is committed yet. Review, then commit:
  git -C <root> rm .claims/b-fact.md
  git -C <root> commit -m "Retire claim b-fact: superseded by a real test"
