crates/claim/tests/snapshots/snapshots__stats_human_snapshot.snap
---
source: crates/claim/tests/snapshots.rs
expression: "stdout(&repo, &[\"stats\"], 0)"
---
Claim store stats (computed at 2026-07-17T00:00:00Z)

Claims: 5
  verified:  1
  drifted:   1
  stale:     2
  retired:   1

Verdicts recorded (all history):
  held:          4
  drifted:       1
  unverifiable:  0
  broken:        1

Drifts caught (claims that ever drifted): 1
Never verified (no passing verdict):      1
Overdue now (stale or drifted):           3
Oldest last-verified:                     2026-01-01T00:00:00Z

Kill metrics (docs/design/PRODUCT.md section 9) — need human input, not fabricated:
  false-alarm rate: not available — denominator 1 (total Drifted verdicts recorded); needs a human (or a later `--false-alarm` marker) to classify each fired drift as a real drift or a false alarm; the store does not record that judgement
  minutes per claim: not available — denominator 5 (total claims); needs authoring wall-clock time, which the tool never observed; a later item may capture it at `claim add` time
